--- a/App-Challenge/App/Localizable.xcstrings
+++ b/App-Challenge/App/Localizable.xcstrings
@@ -195,6 +195,9 @@
         }
       }
     },
+    "Preço: %@" : {
+
+    },
     "Search" : {
       "localizations" : {
         "pt-BR" : {
@@ -214,6 +217,9 @@
           }
         }
       }
+    },
+    "Toque para abrir os detalhes" : {
+
     },
     "Total:" : {
       "localizations" : {
