--- a/App-Challenge/App/Localizable.xcstrings
+++ b/App-Challenge/App/Localizable.xcstrings
@@ -321,6 +321,7 @@
       }
     },
     "US$ %.2f" : {
+      "extractionState" : "stale",
       "localizations" : {
         "pt-BR" : {
           "stringUnit" : {
@@ -329,6 +330,9 @@
           }
         }
       }
+    },
+    "US$ %@" : {
+
     },
     "x%lld" : {
 
