pronta parte categorias

--- a/App-Challenge/App/Localizable.xcstrings
+++ b/App-Challenge/App/Localizable.xcstrings
@@ -12,6 +12,7 @@
       }
     },
     "%@ Category" : {
+      "extractionState" : "stale",
       "localizations" : {
         "pt-BR" : {
           "stringUnit" : {
