--- a/App-Challenge/App/Localizable.xcstrings
+++ b/App-Challenge/App/Localizable.xcstrings
@@ -22,6 +22,16 @@
         }
       }
     },
+    "%@. Preço US$ %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@. Preço US$ %2$@"
+          }
+        }
+      }
+    },
     "%lld" : {
       "localizations" : {
         "pt-BR" : {
